fix: photo position on Safari

--- a/src/photos/styles/viewer.styl
+++ b/src/photos/styles/viewer.styl
@@ -47,14 +47,14 @@
 .pho-viewer-photo
     position         relative
     display          flex
-    flex             1 1 auto
+    flex             1 1 100%
     max-height       100%
     max-width        100%
     justify-content  center
     align-items      center
+    flex-direction   column
 
     img
-        position    absolute
         display     block
         max-width   100%
         max-height  100%
